--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,6 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     </head>
-    <div id="hdr">BGV{% if %}{% endif %}</div>
-    {% block content %}
-    {% endblock %}
+    <div id="hdr">BGV {% if current_user.is_authenticated %}<a href="{{url_for('logout')}}">Logout</a>{% endif %}</div>
+    <div id="content">{% block content %}{% endblock %}</div>
 </html>
