--- a/app/static/style.css
+++ b/app/static/style.css
@@ -32,3 +32,14 @@ div#container {
     border-radius: 10px;
     background-color: #c2c2d6;
 }
+ a#logout{
+     position: absolute;
+     right:5%;
+     bottom:0pt;
+     padding:5pt;
+     color:#FFFFFF;
+     background-color:#204060;
+     text-decoration:none;
+     font-size: 10pt; 
+     box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+ }
