--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,8 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     </head>
-    <div id="hdr">BGV {% if current_user.is_authenticated %}<a href="{{url_for('logout')}}">Logout</a>{% endif %}</div>
+    <div id="hdr">BGV 
+        {% if current_user.is_authenticated %}<a id="logout" href="{{url_for('logout')}}">Logout</a>{% endif %}
+    </div>
     <div id="content">{% block content %}{% endblock %}</div>
 </html>
