--- a/app/static/style.css
+++ b/app/static/style.css
@@ -43,3 +43,6 @@ div#container {
      font-size: 10pt; 
      box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  }
+ a#logout :active{
+     background-color:#4CAF50;
+ }
