--- a/app/static/style.css
+++ b/app/static/style.css
@@ -14,7 +14,6 @@ div#hdr {
     padding-left: 10pt;
     padding-right: 10pt;
     background-color: #336699;
-    border-bottom: 3pt #204060 solid;
     color: #ffffff;
     font-size: 40pt;
 }
@@ -23,36 +22,64 @@ div#content {
     top:60pt;
     left:0pt;
     width:100%;
+    height:88%;
 }
 div#container {
     max-width: 300px;
     margin: auto;
     margin-top: 100px;
-    padding: 5pt 10pt 5pt 10pt;
+    padding: 20pt;
     border-radius: 10px;
     background-color: #c2c2d6;
 }
- a{
-     padding:5pt;
+div#menu{
+     margin: auto;
+     display: table;
+}
+a{
+     padding:10pt;
      color:#FFFFFF;
      background-color:#204060;
      text-decoration:none;
      font-size: 10pt; 
      -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
-    box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
  }
  a:hover{
      background-color:#0099cc;
-     -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-     -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-     box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
  }
  a#logout{
      position: absolute;
-     right:5%;
+     right:3%;
      bottom:0pt;
  }
- a#choice{
-     margin-left:0px;
+ a#main_btn{
+     position: absolute;
+     right:9%;
+     bottom:0pt;
  }
+ a#btn{
+     margin:5px;
+ }
+ div#content-box{
+     margin:auto;
+     margin-top:50px;
+     height:90%;
+     width:100%;
+ }
+ div#graph-container {
+     background-color: #ffffff;
+     position: absolute;
+     top:2%;
+     left:2%;
+     bottom:2%;
+     right:2%;
+     border-radius: 10px;
+     -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+}
+div#graph-container:hover {
+    border:1px deepskyblue solid;
+}
