--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,8 +2,10 @@
     <head>
         <title>{% block title %}{% endblock %}</title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+        
     </head>
     <div id="hdr">BGV 
+        {% if main_btn %}<a id="main_btn" href="{{url_for('home')}}">Main</a>{% endif %}
         {% if current_user.is_authenticated %}<a id="logout" href="{{url_for('logout')}}">Logout</a>{% endif %}
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
