--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -1,9 +1,14 @@
 {% extends "layout.html" %}
 {% block title %} Investor Map {% endblock %}
 {% block content %}
-    <body>
-       <div id="content-box"><div id="graph-container"></div></div>
-    </body>
+    <div id="content-box">
+      <div id="graph-container">
+        <div id="controls">
+          <div class="item" style="border-bottom-right-radius: 10px; border-top-left-radius: 10px">
+            <kbd>shift</kbd> + <kbd style="margin-right:5px">l</kbd> Lasso
+        </div>
+      </div>
+    </div>
     <!-- SIGMA IMPORTS -->
     <script src={{ url_for('static', filename='plugins/linkurious.js/src/sigma.core.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/src/conrad.js')}}></script>
@@ -58,17 +63,21 @@
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.dragNodes/sigma.plugins.dragNodes.js')}}></script>
     <!-- ACTIVE STATE -->
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.activeState/sigma.plugins.activeState.js')}}></script>
-    <!-- AUTOCURVE -->
-    <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.renderers.linkurious/canvas/sigma.canvas.edges.autoCurve.js')}}></script>
+    <!-- FEATURE PLUGINS -->
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.renderers.halo/settings.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.renderers.halo/sigma.renderers.halo.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.select/sigma.plugins.select.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.helpers.graph/sigma.helpers.graph.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.keyboard/sigma.plugins.keyboard.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.lasso/sigma.plugins.lasso.js')}}></script>
+    <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.tooltips/sigma.plugins.tooltips.js')}}></script>
+    <script src={{ url_for('static', filename='mustache.min.js')}}></script>
     <!-- force layout -->
+    <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.plugins.animate/sigma.plugins.animate.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.layouts.forceAtlas2/worker.js')}}></script>
     <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.layouts.forceAtlas2/supervisor.js')}}></script>
+    <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.layouts.forceLink/worker.js')}}></script>
+    <script src={{ url_for('static', filename='plugins/linkurious.js/plugins/sigma.layouts.forceLink/supervisor.js')}}></script>
     <script script type="application/javascript">
         //set renderer to canvas - WebGL not supported
         sigma.renderers.def = sigma.renderers.canvas;
@@ -82,52 +91,85 @@
           container: 'graph-container',
           settings: {
             edgeLabelThreshold: 5,
-            minEdgeSize: 4,
+            minEdgeSize: 10,
             enableEdgeHovering: false,
-            nodeActiveBorderSize: 2,
-            nodeActiveOuterBorderSize: 3,
+            nodeActiveBorderSize: 3,
+            nodeActiveOuterBorderSize: 1,
             defaultNodeActiveBorderColor: '#fff',
             defaultNodeActiveOuterBorderColor: 'rgb(236, 81, 72)',
-            nodeHaloColor: 'rgba(236, 81, 72, 0.2)',
-            nodeHaloSize: 50
+            nodeHaloColor: 'rgba(255, 160, 160, 0.2)',
+            nodeHaloSize: 20
           }
         });
 
-        /* cypher neo4j */
+        //graph customization
+        function customizeG(s){
+          s.graph.nodes().forEach(function(n, i, a) {
+            n.x = Math.cos(Math.PI * 10 * i / a.length)*10;
+            n.y = Math.sin(Math.PI * 10 * i / a.length)*10;
+            n.label = n.neo4j_data.name;
+            if(n.neo4j_labels[0] == 'City'){
+               n.color = '#4DC4E4';
+               n.size = 20.0
+            }
+            else if(n.neo4j_labels[0] == 'Category'){
+              n.color = '#FF9300';
+              n.size = 20.0}
+            else{
+              n.size = 15.0
+            }
+           });
+           s.graph.edges().forEach(function (e){
+             e.style='curve';
+           });
+           var fa = sigma.layouts.configForceLink(s, {
+                linLogMode: false, 
+                adjustSizes: true,
+                worker: true,
+                autoStop: true,
+                background: true,
+                scaleRatio: 10,
+                gravity: 3,
+                easing: 'cubicInOut',
+                nodeSiblingsScale: 5,
+                barnesHutOptimize: true,
+          });
+          sigma.layouts.startForceLink();
+          var cam = s.camera;
+          sigma.misc.animation.camera(cam, { 
+              ratio: 1.9
+          });
+          s.refresh();
+        }
+         
+        //load neo4j data and customize sigma
         sigma.neo4j.cypher(
             { url: 'http://localhost:7474', user: 'neo4j', password: 'PoIsNot8080' },
-            'MATCH (n) OPTIONAL MATCH (n)-[r]->(m) RETURN n,r,m LIMIT 100',
+            'MATCH (n) OPTIONAL MATCH (n)-[r]->(m) RETURN n,r,m LIMIT 1000',
             s,
-            function() { s.refresh(); },
+            customizeG,
+            function() {     
+              s.refresh();   
+            },
             { container: 'graph-container' }
         );
-      
-      /*force layout*/
-      var fa = s.startForceAtlas2(
-      {
-        worker: true,
-        outboundAttractionDistribution: true,
-        strongGravityMode: true
-      });
+       
 
       //active state
       var activeState = sigma.plugins.activeState(s);
       //keyboard
       var keyboard = sigma.plugins.keyboard(s, s.renderers[0]);
-
-      /* select */
+      // select 
       var select = sigma.plugins.select(s, activeState);
       select.bindKeyboard(keyboard);
-
-      /* drag */
+      //dragging
       var dragListener = sigma.plugins.dragNodes(s, s.renderers[0], activeState);
-
-      /* lasso plugin */
+      //lasso tool
       var lasso = new sigma.plugins.lasso(s, s.renderers[0], {
-        'strokeStyle': 'rgb(236, 81, 72)',
-        'lineWidth': 5,
+        'strokeStyle': 'rgb(236, 101, 72)',
+        'lineWidth': 1,
         'fillWhileDrawing': true,
-        'fillStyle': 'rgba(236, 81, 72, 0.2)',
+        'fillStyle': 'rgba(200, 100, 100, 0.2)',
         'cursor': 'crosshair'
       });
 
@@ -143,7 +185,6 @@
       s.renderers[0].bind('render', function(e) {
         renderHalo();
       });
-
 
       //keys to activate lasso
       //shift+l
@@ -162,7 +203,54 @@
           lasso.deactivate();
           s.refresh({ skipIdexation: true });
         }, 0);
+       
       });
-   
+
+      //deactivate selection when clicking on stage
+      s.bind('clickStage doubleClickStage rightClickStage', function(e) {
+         activeState.dropNodes();
+         renderHalo();
+      });
+
+      
+
+      //tooltips
+      var toolTip = sigma.plugins.tooltips(s, s.renderers[0], {
+        node: [{
+          show: 'clickNode',
+          position: 'top',
+          template:
+          {% raw %}
+          ''+
+          '<div class="tooltip_g">' +
+          '  <div class="tooltip_header">{{label}}</div><div class="close_btn" onclick="close_tooltip()">X</div>' +
+          '  <div class="tooltip_body">' +
+          '    <table>' +
+          '      {{#neo4j_arr}}<tr class="item">{{#.}}<td>{{.}}</td>{{/.}}{{/neo4j_arr}}'+
+          '    </table>' +
+          '  </div>' +
+          '</div><div class="arrow-down"></div>',
+          {%endraw%}
+          renderer: function(node, template) {
+              // drop halos
+              activeState.dropNodes();
+              renderHalo();
+              //node properties to array
+              node.neo4j_arr=[];
+              for (var i in node.neo4j_data){
+                if(i!="name"){
+                  node.neo4j_arr.push([i,node.neo4j_data[i]]);
+                }
+              } 
+              //return html
+              return Mustache.render(template, node);
+          }
+        }],
+      });
+
+      //close tooltip
+      function close_tooltip(){
+        toolTip.close();
+      }
     </script>
 {% endblock %}
