--- a/app/static/style.css
+++ b/app/static/style.css
@@ -80,6 +80,120 @@ a{
      -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
      box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
 }
-div#graph-container:hover {
-    border:1px deepskyblue solid;
+div#controls {
+    position: absolute;
+    bottom:0%;
+    right:0%;
+    font-size:10pt;
 }
+.item{
+    font-size: 12px;
+    color:#34495E;
+    background-color: #F4F6F7;
+    padding:8px;
+     
+}
+.tooltip_header{
+    margin-bottom: 10px;
+    width:70%;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #B0005B;
+    color: #ECF0F1;
+    padding:5px 10px;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.50);
+    box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.50);
+}
+.tooltip_body{
+    overflow: auto;
+    max-height: 150px;
+}
+.tooltip_g{
+    padding:10px;
+    min-width: 250px;
+    background-color: #F4F6F7;
+    font-size: 12px;
+    border-radius: 5px;
+    -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.50);
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.50);
+}
+.arrow-down {
+  margin-left:46%;
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid  #F4F6F7;
+}
+.close_btn{
+    color: #FFFFFF;
+    background-color:#204060;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    top: 10px;
+    right: 5px;
+     -webkit-box-shadow: 1px 2px 2px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 1px 2px 2px 0px rgba(0,0,0,0.50);
+    box-shadow: 1px 2px 2px 0px rgba(0,0,0,0.50);
+}
+.close_btn:hover{
+    background-color:#0099cc;
+}
+kbd{
+    padding: 5px;
+    color: #FFFFFF;
+    background-color:#204060;
+    border-radius: 6px;
+     -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+     box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+}
+#user_display{
+    background-color: #ffffff;
+    border-radius: 10px;
+    position: absolute;
+    top: 2%;
+    left: 5%;
+    bottom: 5%;
+    right: 2%;
+    width:25%;
+     -webkit-box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.75);
+     -moz-box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.75);
+     box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.75);
+}
+td.displ{
+    width:90%;
+    text-align: center;
+    background-color: #E5E8E8;
+    padding: 10px;
+    -webkit-box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+    box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+}
+td.check_box{
+    background-color: #E5E8E8;
+    -webkit-box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+    box-shadow: 1px 2px 4px -1px rgba(0,0,0,0.75);
+}
+.header{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 10px;
+    font-style: bold;
+    font-size: 20px;
+    text-align: center;
+    background-color: #34495E;
+    color: #FFFFFF
+}
+input{
+     text-decoration:none;
+     font-size: 10pt; 
+ }
