--- a/app/templates/display_users.html
+++ b/app/templates/display_users.html
@@ -28,7 +28,7 @@
                         </tr>
                         <tr>
                             <td class="displ" style="text-align:left; width:25%">Password:</td>
-                            <td  style="width:75%"> <input style="height:100%;" type="text" name="password"></input></td>
+                            <td  style="width:75%"> <input style="height:100%;" type="password" name="password"></input></td>
                         </tr>
                         <tr>
                             <td></td>
