--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -4,8 +4,11 @@
     <div id="content-box">
       <div id="graph-container">
         <div id="controls">
-          <div class="item" style="border-bottom-right-radius: 10px; border-top-left-radius: 10px">
-            <kbd>shift</kbd> + <kbd style="margin-right:5px">l</kbd> Lasso
+          <div class="item" style="border-top-left-radius: 10px; border-bottom: 1px solid #204060">
+            <kbd>+</kbd> and <kbd>-</kbd> or Scroll to Zoom
+          </div>
+          <div class="item" style="border-bottom-right-radius: 10px;">
+            <kbd>Shift</kbd> + <kbd style="margin-right:5px">L</kbd> Lasso
         </div>
       </div>
     </div>
@@ -196,6 +199,21 @@
           }
       });
 
+      //zoom +
+      keyboard.bind('43', function() {
+          var cam = s.camera;
+          sigma.misc.animation.camera(cam, { 
+              ratio: 0.5
+          });
+      });
+
+       //zoom -
+      keyboard.bind('45', function() {
+          var cam = s.camera;
+          sigma.misc.animation.camera(cam, { 
+              ratio: 1.1
+          });
+      });
 
       // selectedNodes event
       lasso.bind('selectedNodes', function (event) {
