--- a/app/templates/display_users.html
+++ b/app/templates/display_users.html
@@ -32,7 +32,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td><input style="margin-top:20px; margin-left:50%;" type="submit" value="Submit"></input>
+                            <td><input style="margin-top:20px; margin-left:70%" type="submit" value="Submit"></input>
                         </td></tr>
                     </form>
                 </table>
