--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -205,6 +205,7 @@
           sigma.misc.animation.camera(cam, { 
               ratio: 0.5
           });
+          s.refresh();
       });
 
        //zoom -
@@ -213,6 +214,7 @@
           sigma.misc.animation.camera(cam, { 
               ratio: 1.1
           });
+          s.refresh();
       });
 
       // selectedNodes event
