--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -4,7 +4,7 @@
     <div id="content-box">
       <div id="graph-container">
         <div id="controls">
-          <div class="item" style="border-top-left-radius: 10px; border-bottom: 1px solid #204060">
+          <div class="item" style="border-top-left-radius: 10px; border-bottom: 1px solid #ABB2B9">
             <kbd>Scroll</kbd> to Zoom
           </div>
           <div class="item" style="border-bottom-right-radius: 10px;">
