--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,6 @@
         {% if current_user.is_authenticated %}<a id="logout" href="{{url_for('logout')}}">Logout</a>{% endif %}
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
-    <div style="position:absolute, top:95%; right:2%; font-size:8px; padding: 5px; width:95%; text-align:right"> Made by Yevgen Kanalosh for BGV. Uses linkurious.js (under GNU General Public License v.3). </div>
+    <div style="position:absolute; bottom:2%; right:2%; font-size:8px; padding: 5px; width:95%; text-align:right"> Made by Yevgen Kanalosh for BGV. Uses linkurious.js (under GNU General Public License v.3). </div>
     </body>
 </html>
